[gd_scene load_steps=15 format=2]

[ext_resource path="res://wiki_handler/wiki.gd" type="Script" id=1]
[ext_resource path="res://wiki_handler/assets/forward.png" type="Texture" id=2]
[ext_resource path="res://wiki_handler/assets/back.png" type="Texture" id=3]
[ext_resource path="res://wiki_handler/assets/home.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/AnonymousPro-Italic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/AnonymousPro-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/AnonymousPro-BoldItalic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/AnonymousPro-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="Theme" id=1]
RichTextLabel/colors/selection_color = Color( 1, 0.647059, 0.101961, 0.8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 8 )

[node name="Wiki" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 1 )

[node name="Buttons" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 38.0

[node name="Home" type="Button" parent="Buttons"]
margin_right = 44.0
margin_bottom = 38.0
hint_tooltip = "Open root WIKI page"
icon = ExtResource( 4 )

[node name="Space" type="Control" parent="Buttons"]
margin_left = 48.0
margin_right = 112.0
margin_bottom = 38.0
rect_min_size = Vector2( 64, 0 )

[node name="Back" type="Button" parent="Buttons"]
margin_left = 116.0
margin_right = 168.0
margin_bottom = 38.0
rect_min_size = Vector2( 52, 20 )
hint_tooltip = "Go back to previous page in history"
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )

[node name="Forward" type="Button" parent="Buttons"]
margin_left = 172.0
margin_right = 224.0
margin_bottom = 38.0
rect_min_size = Vector2( 52, 20 )
hint_tooltip = "Go forward in browse history"
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )

[node name="TextArea" type="RichTextLabel" parent="."]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 600.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/bold_italics_font = SubResource( 3 )
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Home" to="." method="_go_home"]
[connection signal="pressed" from="Buttons/Back" to="." method="_go_back"]
[connection signal="pressed" from="Buttons/Forward" to="." method="_go_forward"]
[connection signal="meta_clicked" from="TextArea" to="." method="_on_meta_clicked"]
